{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 108,
  "lineage": "036c34ee-ef25-7b44-cbd9-ccd9b750707d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a61d52cc2e4d3d56",
            "association_id": "eipassoc-0945083cbb6b6648e",
            "domain": "vpc",
            "id": "eipalloc-0a61d52cc2e4d3d56",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d215a63c497c2098",
            "private_dns": "ip-10-0-12-90.ec2.internal",
            "private_ip": "10.0.12.90",
            "public_dns": "ec2-54-157-81-130.compute-1.amazonaws.com",
            "public_ip": "54.157.81.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-microservice-nat-a-eip-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-nat-a-eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf194e073011a103",
            "association_id": "eipassoc-0f5c28b23d0d019f8",
            "domain": "vpc",
            "id": "eipalloc-0cf194e073011a103",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e29c47f09db737b",
            "private_dns": "ip-10-0-13-22.ec2.internal",
            "private_ip": "10.0.13.22",
            "public_dns": "ec2-52-55-169-196.compute-1.amazonaws.com",
            "public_ip": "52.55.169.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-microservice-nat-b-eip-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-nat-b-eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:internet-gateway/igw-070d1f4b76cee4faf",
            "id": "igw-070d1f4b76cee4faf",
            "owner_id": "438555236323",
            "tags": {
              "Name": "ecs-microservice-igw-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-igw-dev"
            },
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a61d52cc2e4d3d56",
            "connectivity_type": "public",
            "id": "nat-0880a5834d0f0a666",
            "network_interface_id": "eni-0d215a63c497c2098",
            "private_ip": "10.0.12.90",
            "public_ip": "54.157.81.130",
            "subnet_id": "subnet-093760e643ba1c183",
            "tags": {
              "Name": "ecs-microservice-nat-a-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-nat-a-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_a_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf194e073011a103",
            "connectivity_type": "public",
            "id": "nat-090832a0d0d147123",
            "network_interface_id": "eni-02e29c47f09db737b",
            "private_ip": "10.0.13.22",
            "public_ip": "52.55.169.196",
            "subnet_id": "subnet-084cab20517e95a35",
            "tags": {
              "Name": "ecs-microservice-nat-b-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-nat-b-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_b_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-070d1f4b76cee4faf",
            "id": "r-rtb-09545f5063532d51f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09545f5063532d51f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:route-table/rtb-0a2443ae13e0d4e97",
            "id": "rtb-0a2443ae13e0d4e97",
            "owner_id": "438555236323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0880a5834d0f0a666",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-microservice-private-rt-a-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-private-rt-a-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_a_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:route-table/rtb-0f983f10dfe5c8580",
            "id": "rtb-0f983f10dfe5c8580",
            "owner_id": "438555236323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-090832a0d0d147123",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-microservice-private-rt-b-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-private-rt-b-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_b_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:route-table/rtb-09545f5063532d51f",
            "id": "rtb-09545f5063532d51f",
            "owner_id": "438555236323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070d1f4b76cee4faf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-microservice-public-rt-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-public-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019dc55e77ea3af15",
            "route_table_id": "rtb-0a2443ae13e0d4e97",
            "subnet_id": "subnet-0cae98c4ef9152ee8"
          },
          "dependencies": [
            "aws_eip.nat_a_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09522e3bc68da66df",
            "route_table_id": "rtb-0f983f10dfe5c8580",
            "subnet_id": "subnet-0c9f541124522f038"
          },
          "dependencies": [
            "aws_eip.nat_b_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_b",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091365d1f9464ac2a",
            "route_table_id": "rtb-09545f5063532d51f",
            "subnet_id": "subnet-093760e643ba1c183"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bc84fd905010b7e",
            "route_table_id": "rtb-09545f5063532d51f",
            "subnet_id": "subnet-084cab20517e95a35"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:subnet/subnet-0cae98c4ef9152ee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cae98c4ef9152ee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438555236323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-microservice-private-subnet-a-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ecs-microservice-private-subnet-a-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:subnet/subnet-0c9f541124522f038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9f541124522f038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438555236323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-microservice-private-subnet-b-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ecs-microservice-private-subnet-b-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:subnet/subnet-093760e643ba1c183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093760e643ba1c183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438555236323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-microservice-public-subnet-a-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ecs-microservice-public-subnet-a-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:subnet/subnet-084cab20517e95a35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084cab20517e95a35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438555236323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-microservice-public-subnet-b-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ecs-microservice-public-subnet-b-dev",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d6011dc5249959d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438555236323:vpc/vpc-0d6011dc5249959d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de0f644a5144080d",
            "default_route_table_id": "rtb-056674602a0c4416e",
            "default_security_group_id": "sg-0d152e80a78b44254",
            "dhcp_options_id": "dopt-0e2927da64a9c62bd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6011dc5249959d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056674602a0c4416e",
            "owner_id": "438555236323",
            "tags": {
              "Name": "ecs-microservice-main-dev"
            },
            "tags_all": {
              "Name": "ecs-microservice-main-dev"
            }
          }
        }
      ]
    }
  ]
}